syntax = "proto3";

package volume;

service VolumeVehicle {
    rpc SayHello (HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}
  
// The response message containing the greetings
message HelloReply {
    string message = 1;
}